objects/AcctSeedERP__Purchase_Order_Line__c.object
<CustomObject>
    <fields>
        <fullName>AcctSeedERP__Comment__c</fullName>
        <label>Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Branch where the project is classified</inlineHelpText>
        <label>GL Account Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
        <label>GL Account Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Purchase Order Lines (GL Account Variable 2)</relationshipLabel>
        <relationshipName>Purchase_Order_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
        <label>GL Account Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Purchase Order Lines (GL Account Variable 3)</relationshipLabel>
        <relationshipName>Purchase_Order_Lines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Product on the PO Line
Defaults as the Product listed on the Requisition
PRINTS ON THE PO</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Line item the PO Line is associated to
Automatically fills in when PO Line is created from a requisition</inlineHelpText>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Project_Task__c.AcctSeed__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AcctSeedERP__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project_Task__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Project the PO Line is for</inlineHelpText>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Purchase_Order__c</fullName>
        <inlineHelpText>Purchase Order the PO Line Is associated with</inlineHelpText>
        <label>Purchase Order</label>
        <referenceTo>AcctSeedERP__Purchase_Order__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Quantity_Received__c</fullName>
        <label>Quantity Received</label>
        <summarizedField>AcctSeedERP__Purchase_Order_Inventory_Movement__c.AcctSeedERP__Quantity__c</summarizedField>
        <summaryForeignKey>AcctSeedERP__Purchase_Order_Inventory_Movement__c.AcctSeedERP__Purchase_Order_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Quantity_Unreceived__c</fullName>
        <formula>AcctSeedERP__Quantity__c- AcctSeedERP__Quantity_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Unreceived</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Quantity__c</fullName>
        <inlineHelpText>Quantity to order
For Subcontractors, enter 1</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Total__c</fullName>
        <formula>AcctSeedERP__Quantity__c *AcctSeedERP__Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Unit_Price__c</fullName>
        <inlineHelpText>defaults to $1 when created from a construction requisition
if manually creating, enter $1
Needed for Accounting Seed functionality</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Spend__c</fullName>
        <description>Used for the development cost reports: will not be visible on any layouts.</description>
        <formula>Roll_Up_All_Account_Payable_Lines__c +  JE_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <inlineHelpText>This is from the SOLine and is editable</inlineHelpText>
        <label>Additional Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>All_Quantity_Received__c</fullName>
        <formula>AcctSeedERP__Quantity__c = Quantity_Received_To_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Quantity Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_AP_Line_Total__c</fullName>
        <description>Roll Up only AP Lines part of an invoice that has been Posted
Used with Roll Up Helper</description>
        <inlineHelpText>Roll Up only AP Lines part of an invoice that has been Posted</inlineHelpText>
        <label>Posted AP Line Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Con_Req_Creator_ID__c</fullName>
        <description>pulls SF ID of the creator of the Con Req</description>
        <formula>Construction_Req__r.CreatedById</formula>
        <inlineHelpText>pulls SF ID of the creator of the Con Req</inlineHelpText>
        <label>Con Req Creator ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Construction_Req__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The related Construction Requisition- where the PO Line was generated from
Automatically filled in when the PO Line is created</inlineHelpText>
        <label>Construction Requisition</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Construction Requisition value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>$Source.AcctSeedERP__Project__c</field>
                <operation>equals</operation>
                <valueField>AcctSeedERP__Sales_Order_Line__c.AcctSeedERP__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeedERP__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Construction_Requisition_ID__c</fullName>
        <description>Used with RollUp Helper to populate Con Req on the POL</description>
        <label>Construction Requisition ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Code__c</fullName>
        <formula>AcctSeedERP__Project_Task__r.Cost_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Cost Code entered in the Line Item associated with the PO Line</inlineHelpText>
        <label>Cost Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Delivery_Date__c</fullName>
        <inlineHelpText>Based on Vendor&apos;s approximate transit time + the Vendor Confirmed Ship Date. 
If PO Line Status is &quot;Received In-Full: Warehouse&quot;, then this is the most current information provided to Procurement from the Project Team re: when Product is needed on-site.</inlineHelpText>
        <label>Estimated Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Material_Delivery__c</fullName>
        <description>For Expected Material Delivery calendar</description>
        <formula>IF(  ISBLANK(Vendor_Confirmed_Ship_Date__c),  Requested_Delivery_Date__c ,Vendor_Confirmed_Ship_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Material Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Invoice_Status__c</fullName>
        <description>Hidden field. Set automatically by trigger AccountPayable_FinalInvoice to the Invoice Status field of the associated AP Invoice (associated via the associated Account Payable Line) if it is marked Final Invoice.</description>
        <label>Final Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <description>indicates value based on various status of PO, POL and when the record was created.</description>
        <formula>IF(
AND(
ISPICKVAL( AcctSeedERP__Purchase_Order__r.AcctSeedERP__Status__c, &quot;Open&quot;),  
ISPICKVAL( PO_Line_Status__c , &quot;Open&quot;),  
DATEVALUE(CreatedDate + 2)   &lt;=   TODAY()
),&quot;Not Yet Submitted&quot;,

IF(
AND(
OR(ISPICKVAL( AcctSeedERP__Purchase_Order__r.AcctSeedERP__Status__c, &quot;PM Approved&quot;), ISPICKVAL( AcctSeedERP__Purchase_Order__r.AcctSeedERP__Status__c, &quot;Aaron Approved&quot;)),
ISPICKVAL( PO_Line_Status__c , &quot;Open&quot;)),  &quot;Not Yet Submitted&quot;,

IF(
AND(
ISPICKVAL( AcctSeedERP__Purchase_Order__r.AcctSeedERP__Status__c, &quot;Need More Information&quot;),  
ISPICKVAL( PO_Line_Status__c , &quot;Open&quot;)), &quot;Missing Information&quot;,

IF(
AND(
OR(
ISPICKVAL( AcctSeedERP__Purchase_Order__r.AcctSeedERP__Status__c, &quot;Invoice Received&quot;),  ISPICKVAL( AcctSeedERP__Purchase_Order__r.AcctSeedERP__Status__c, &quot;Invoice Processed&quot;)),
POLine_Total__c -  Roll_Up_All_Account_Payable_Lines__c = 0,
TODAY() &gt;  (AcctSeedERP__Purchase_Order__r.PO_Status_Change_Date__c +7)), &quot;Invoice Not Processed&quot;,


IF(
AND(
OR(
ISPICKVAL(  PO_Line_Status__c , &quot;Vendor Shipped Material&quot;),  ISPICKVAL(  PO_Line_Status__c , &quot;Shipment Scheduled&quot;), ISPICKVAL(  PO_Line_Status__c , &quot;Partially Received: Warehouse&quot;), ISPICKVAL(  PO_Line_Status__c , &quot;Partially Received: Job Site&quot;), ISPICKVAL(  PO_Line_Status__c , &quot;Received In-Full: Warehouse&quot;), ISPICKVAL(  PO_Line_Status__c , &quot;Received In-Full: Job Site&quot;)),
POLine_Total__c -  Roll_Up_All_Account_Payable_Lines__c  &lt;&gt;  0,
TODAY() &gt;  ( POLStatusChangeDate__c  +7)), &quot;Invoice Missing&quot;,

IF( 
OR(
AND(
ISPICKVAL( PO_Line_Status__c , &quot;Vendor Received PO&quot;),
Vendor_Confirmed_Ship_Date__c &lt; TODAY()),
AND(
ISPICKVAL( PO_Line_Status__c , &quot;Submitted to Vendor&quot;),
Vendor_Confirmed_Ship_Date__c &lt; TODAY())), &quot;Confirm In Transit/Received&quot;,

IF(
AND(
ISPICKVAL( AcctSeedERP__Purchase_Order__r.AcctSeedERP__Status__c, &quot;Vendor Shipped Material&quot;),
ISPICKVAL( PO_Line_Status__c , &quot;Vendor Shipped Material&quot;),
ISBLANK(Vendor_Confirmed_Ship_Date__c )
), &quot;Ship Date Not Populated&quot;,

IF( 
AND(
OR(ISPICKVAL( PO_Line_Status__c , &quot;Vendor Received PO&quot;),ISPICKVAL( PO_Line_Status__c , &quot;Submitted to Vendor&quot;)),
Vendor_Confirmed_Ship_Date__c &gt; TODAY()), &quot;Pending Shipment Approaching&quot;,

IF(
AND(
OR(ISPICKVAL( PO_Line_Status__c , &quot;Vendor Received PO&quot;), ISPICKVAL( PO_Line_Status__c , &quot;Submitted to Vendor&quot;)),
ISBLANK( AcctSeedERP__Purchase_Order__r.SOA_Returned__c ),
NOT(ISBLANK( Vendor_Confirmed_Ship_Date__c)),
AcctSeedERP__Purchase_Order__r.AcctSeedERP__Order_Date__c  &lt; (TODAY()-7)
), &quot;SOA Missing&quot;,

IF(
AND(
OR(
ISPICKVAL( PO_Line_Status__c , &quot;Vendor Received PO&quot;), ISPICKVAL( PO_Line_Status__c , &quot;Material Deposit Paid&quot;)
),
ISBLANK(Vendor_Confirmed_Ship_Date__c )
), &quot;Confirm Ship Date&quot;,


IF(
ISPICKVAL( PO_Line_Status__c , &quot;Closed&quot;), &quot;Closed&quot;,

IF(
ISPICKVAL( PO_Line_Status__c , &quot;Rejected&quot;), &quot;Rejected&quot;,
IF(
ISPICKVAL( PO_Line_Status__c , &quot;Cancelled&quot;), &quot;Cancelled&quot;,



IF(
ISPICKVAL( PO_Line_Status__c , &quot;Shipment On Hold&quot;), &quot;On Hold&quot;,


IF(
POLine_Total__c -  Roll_Up_All_Account_Payable_Lines__c = 0, &quot;All Costs Received&quot;,

IF(
POLine_Total__c &gt; Roll_Up_All_Account_Payable_Lines__c, &quot;Confirm In Transit/Received&quot;,

NULL
))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>indicates value based on various status of PO, POL and when the record was created.</inlineHelpText>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <inlineHelpText>This is from the approved SOLine and is editable.</inlineHelpText>
        <label>Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JE_Total__c</fullName>
        <formula>IF (ISBLANK(Journal_Entry_Line__r.AcctSeed__Credit__c ),  Journal_Entry_Line__r.AcctSeed__Debit__c, Journal_Entry_Line__r.AcctSeed__Credit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JE Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <formula>AcctSeedERP__Project__r.Job_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project Job Number
Pulls from the Project listed</inlineHelpText>
        <label>Job Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journal_Entry_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal Entry Line</label>
        <referenceTo>AcctSeed__Journal_Entry_Line__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material_Delivery_Confirmed__c</fullName>
        <formula>IF( ISBLANK(Vendor_Confirmed_Ship_Date__c), &quot;No&quot; ,&quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material Delivery Confirmed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_PO__c</fullName>
        <formula>IF (  (OR(Cost_Code__c = &quot;Solar Modules&quot;, 
Cost_Code__c = &quot;Inverters&quot;,
Cost_Code__c = &quot;Racking - Materials&quot;, 
Cost_Code__c = &quot;Electrical Materials&quot;,
Cost_Code__c = &quot;DAS - Materials&quot;, 
Cost_Code__c = &quot;Carport Material&quot;,
Cost_Code__c = &quot;Utility Costs-Material&quot;,
Cost_Code__c = &quot;Security Materials&quot;,
CONTAINS(Cost_Code__c, &quot;Material&quot;),
Cost_Code__c = &quot;Inverter&quot;, 
 Construction_Req__r.RecordType.Name = &quot;Minor Component&quot;, 
Construction_Req__r.RecordType.Name = &quot;Major Component&quot;
)),
&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is this a Material PO?</inlineHelpText>
        <label>Material PO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <description>Used in Material PO Rollup to determine if a PO is Material</description>
        <formula>Material_PO__c = &quot;Yes&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Freight_Allowance__c</fullName>
        <label>Max Freight Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>O_M_Install_Type__c</fullName>
        <description>O&amp;M System Install Type from the Project. Used in reports</description>
        <formula>IF(INCLUDES(AcctSeedERP__Project__r.O_M_System_Install_Type__c	, &quot;Carport-Tracker&quot;), &quot;Carport-Tracker&quot; + BR() , NULL) + 
IF(INCLUDES(AcctSeedERP__Project__r.O_M_System_Install_Type__c	, &quot;Ground&quot;), &quot;Ground&quot; + BR() , NULL) + 
IF(INCLUDES(AcctSeedERP__Project__r.O_M_System_Install_Type__c	, &quot;Ground-Landfill&quot;), &quot;Ground-Landfill&quot; + BR() , NULL) + 
IF(INCLUDES(AcctSeedERP__Project__r.O_M_System_Install_Type__c	, &quot;Ground-Tracker&quot;), &quot;Ground-Tracker&quot; + BR() , NULL) + 
IF(INCLUDES(AcctSeedERP__Project__r.O_M_System_Install_Type__c	, &quot;Carport&quot;), &quot;Carport&quot; + BR(), NULL) +
IF(INCLUDES(AcctSeedERP__Project__r.O_M_System_Install_Type__c	, &quot;Roof&quot;), &quot;Roof&quot; + BR(), NULL) +
IF(INCLUDES(AcctSeedERP__Project__r.O_M_System_Install_Type__c	, &quot;Roof-Tracker&quot;), &quot;Roof-Tracker&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>O&amp;M System Install Type from the Project. Used in reports</inlineHelpText>
        <label>O&amp;M Install Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Project_Name__c</fullName>
        <formula>AcctSeedERP__Project__r.Owner:User.LastName &amp; &quot;-&quot; &amp; AcctSeedERP__Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM- Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POLStatusChangeDate__c</fullName>
        <description>updated via a WF whenever POL Status field is  changed no need to be on layouts used in conjunction with formula field FLAG</description>
        <inlineHelpText>updated via a WF whenever POL Status field is  changed</inlineHelpText>
        <label>POL Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POLine_Total__c</fullName>
        <formula>IF( ISPICKVAL( Final_Invoice_Status__c , &quot;Approved&quot;) || ISPICKVAL( Final_Invoice_Status__c , &quot;Posted&quot;) , Roll_Up_All_Account_Payable_Lines__c , (Unit_Cost__c * AcctSeedERP__Quantity__c) + Freight__c + Sales_Tax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field computes (Unit Cost X Qty) + Freight + Sales Tax + Use Tax unless this Purchase Order Line is associated with an AP Invoice that is marked Final Invoice.</inlineHelpText>
        <label>POLine Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Line_Status__c</fullName>
        <label>PO Line Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Aaron Approved</fullName>
                </value>
                <value>
                    <fullName>PM Approved</fullName>
                </value>
                <value>
                    <fullName>Submitted to Vendor</fullName>
                </value>
                <value>
                    <fullName>Vendor Received PO</fullName>
                </value>
                <value>
                    <fullName>Shipment Scheduled</fullName>
                </value>
                <value>
                    <fullName>Vendor Shipped Material</fullName>
                </value>
                <value>
                    <fullName>Shipment On Hold</fullName>
                </value>
                <value>
                    <fullName>Partially Received: Warehouse</fullName>
                </value>
                <value>
                    <fullName>Partially Received: Job Site</fullName>
                </value>
                <value>
                    <fullName>Received In-Full: Warehouse</fullName>
                </value>
                <value>
                    <fullName>Received In-Full: Job Site</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Partially Received</fullName>
                    <label>Partially Received - O&amp;M</label>
                </value>
                <value>
                    <fullName>Received In-Full</fullName>
                    <label>Received In-Full - O&amp;M</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Name__c</fullName>
        <label>PO Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Status__c</fullName>
        <formula>TEXT(AcctSeedERP__Purchase_Order__r.AcctSeedERP__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status of the PO where the PO Line is related</inlineHelpText>
        <label>PO Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Vendor__c</fullName>
        <formula>AcctSeedERP__Purchase_Order__r.AcctSeedERP__Vendor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Vendor listed on the related PO</inlineHelpText>
        <label>PO Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Branch__c</fullName>
        <description>Used in reporting</description>
        <formula>TEXT(AcctSeedERP__Project__r.Branch__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in reporting</inlineHelpText>
        <label>Project Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Email__c</fullName>
        <description>This field will not be on any layout. It is populated by a workflow when a PO Line is created and it is used fro email alerts.</description>
        <label>Project Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Quantity_Received_To_Date__c</fullName>
        <label>Quantity Received To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_greater_than_0__c</fullName>
        <formula>IF( AcctSeedERP__Quantity__c &gt;0, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity greater than 0</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Delivery_Date__c</fullName>
        <inlineHelpText>Date requested by the PM for the material to be delivered or service to be rendered
Defaults based on what was entered on the Requisition</inlineHelpText>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Roll_Up_All_Account_Payable_Lines__c</fullName>
        <inlineHelpText>Sum of related AP lines (Invoices) that are related to the PO Line</inlineHelpText>
        <label>AP Lines Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SFDCProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFDCProject</label>
        <referenceTo>SFDC_Project__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SV_Record_Type__c</fullName>
        <description>Used in reporting.</description>
        <formula>Construction_Req__r.Service_Visit__r.RecordTypeName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in reporting. Displays the record type of the SV related to the Construction Requisition</inlineHelpText>
        <label>SV Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Rate_Percent__c</fullName>
        <inlineHelpText>Defaults as the rate from the Tax Group
Can be manually adjusted or filled in</inlineHelpText>
        <label>Sales Tax Rate</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Rate_Table__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select corrected Tax Rate, if necessary.  Otherwise this is the approved SOLine tax rate table selection.</inlineHelpText>
        <label>Sales Tax Rate Table</label>
        <referenceTo>Tax_Rate__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <formula>AcctSeedERP__Quantity__c * Unit_Cost__c * Sales_Tax_Rate_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quantity * Unit Cost * Sales Tax Rate</inlineHelpText>
        <label>Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ship_to_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is from the Construction Requisition and is editable</inlineHelpText>
        <label>Ship to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Site__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AcctSeedERP__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <formula>Unit_Cost__c * AcctSeedERP__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Tax Group the PO falls under
Defaults from the Tax Group listed on the related Opportunity</inlineHelpText>
        <label>Tax Group</label>
        <referenceTo>Tax_Group__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_SV_Hours_on_Site__c</fullName>
        <formula>Construction_Req__r.Service_Visit__r.Hours_Spent_on_Site__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls hours spent on site from related con req/service visit</inlineHelpText>
        <label>Total SV Hours on Site</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_SV_Travel_Time__c</fullName>
        <formula>Construction_Req__r.Service_Visit__r.Travel_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls total travel time hours from service visit/con req</inlineHelpText>
        <label>Total SV Travel Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <inlineHelpText>This is from the approved SOLine and is editable.</inlineHelpText>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Confirmed_Ship_Date__c</fullName>
        <inlineHelpText>Date of shipment, confirmed by the Vendor
Filled in by Procurement once PO is submitted</inlineHelpText>
        <label>Vendor Confirmed Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor_Description__c</fullName>
        <inlineHelpText>Description of the Product for the vendor
PRINTS ON THE PO</inlineHelpText>
        <label>Vendor Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Part_number__c</fullName>
        <formula>AcctSeedERP__Product__r.Vendor_Part_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Part number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume_PO_Line__c</fullName>
        <label>Volume PO Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volume_Purchase_Total__c</fullName>
        <label>Volume Purchase Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_Purchased_Roll_Up__c</fullName>
        <description>created to allow for rolll up at the PO level for the formula in the Volume Purchase field..cannot roll up a formula field.</description>
        <label>Volume Purchased Roll Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>